objects/talkdesk__Talkdesk_Relate_To_Action__c.object
<CustomObject>
    <fields>
        <fullName>talkdesk__Account_Ids_Found__c</fullName>
        <label>Account Ids Found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Relate_To_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>talkdesk__Case_Ids_Found__c</fullName>
        <label>Case Ids Found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Contact_Ids_Found__c</fullName>
        <label>Contact Ids Found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Lead_Ids_Found__c</fullName>
        <label>Lead Ids Found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Num_Records_Found__c</fullName>
        <label>Num Records Found</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>talkdesk__Opportunity_Ids_Found__c</fullName>
        <label>Opportunity Ids Found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Related_Record__c</fullName>
        <label>Related Record</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Talkdesk_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Talkdesk Activity</label>
        <referenceTo>talkdesk__Talkdesk_Activity__c</referenceTo>
        <relationshipLabel>Relate To Actions</relationshipLabel>
        <relationshipName>Relate_To_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>talkdesk__Talkdesk_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Talkdesk Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>talkdesk__UI_Action__c</fullName>
        <label>UI Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nothing</fullName>
                    <default>true</default>
                    <label>Nothing</label>
                </value>
                <value>
                    <fullName>Show Widget</fullName>
                </value>
                <value>
                    <fullName>Pop Related Record</fullName>
                </value>
                <value>
                    <fullName>Out Of Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Talkdesk Relate To Action</label>
    <nameField>
        <displayFormat>RT-{0000000000}</displayFormat>
        <label>Talkdesk Relate To Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talkdesk Relate To Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>